--- a/static/index.html
+++ b/static/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <!--
 Copyright 2019 Michael Lodato <zvxryb@gmail.com>
 
@@ -80,13 +81,17 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                 border-left-style: none;
                 border-right-style: none;
             }
-            #strafe_menu h1 {
-                font-size: 48pt;
+            #strafe_menu h1, #strafe_menu h2 {
+                margin-top: 0.5em;
+                margin-bottom: 0;
                 font-variant: small-caps;
+                text-align: center;
+            }
+            #strafe_menu h1 {
+                font-size: 40pt;
             }
             #strafe_menu h2 {
-                font-size: 30pt;
-                font-variant: small-caps;
+                font-size: 24pt;
             }
             #strafe_menu button {
                 padding-top: 0.2em;
@@ -111,7 +116,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                 color: white;
                 border-bottom-color: white;
             }
-            #strafe_menu input {
+            #strafe_menu input:not([type="checkbox"]), #strafe_menu select {
                 margin: 0;
                 padding: 0;
                 width: 100%;
@@ -121,6 +126,9 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                 text-align: right;
                 font-family: 'Inconsolata', monospace;
             }
+            #strafe_menu option {
+                color: black;
+            }
             #strafe_menu_movement {
                 text-align: center;
             }
@@ -128,10 +136,12 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                 margin-bottom: 0.5em;
             }
             #strafe_move_presets button {
-                position: relative;
                 font-size: 18pt;
             }
-            #strafe_move_presets button:hover::before {
+            #strafe_root *[data-tooltip] {
+                position: relative;
+            }
+            #strafe_root *[data-tooltip]:hover::before {
                 content: attr(data-tooltip);
                 position: absolute;
                 padding: 0.5em;
@@ -158,9 +168,10 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%, 100%);
+                color: #202020ff;
             }
             #strafe_keys .strafe_highlight {
-                color: #ff0000ff;
+                color: #ffa000ff;
             }
             #strafe_framerate {
                 position: absolute;
@@ -202,8 +213,8 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                 </table>
                 <div id="strafe_framerate"></div>
                 <div id="strafe_speedometer">
-                    <span id="strafe_speed_ups"></span><br/>
-                    <span id="strafe_speed_mph"></span><br/>
+                    <span id="strafe_speed_ups"></span><br>
+                    <span id="strafe_speed_mph"></span><br>
                     <span id="strafe_speed_kph"></span>
                 </div>
             </div>
@@ -212,7 +223,14 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                 <button id="strafe_menu_continue" class="strafe_hidden" type="button">Continue</button>
                 <button id="strafe_menu_tutorial" type="button">Tutorial</button>
                 <button id="strafe_menu_practice" type="button">Practice</button>
-                <div id="strafe_menu_movement">
+                <div>
+                    <h2>Mouse Sensitivity</h2>
+                    <input id="strafe_mouse_input" type="range" min="-13" max="-8" step="0.01">
+                    <div style="text-align:right;">
+                        <label id="strafe_mouse_display" for="strafe_mouse_input"></label>
+                    </div>
+                </div>
+                <div id="strafe_menu_movement" class="strafe_hidden">
                     <h2>Movement</h2>
                     <div id="strafe_move_presets">
                         <button id="strafe_move_vq3-like" type="button" data-tooltip="Moderate acceleration in a gradual arc; high top speed">Vanilla</button>
@@ -222,48 +240,91 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                     <table>
                         <tbody>
                             <tr>
-                                <td colspan="3">Gravity</td>
+                                <td colspan="3"><label for="strafe_move_gravity">Gravity</label></td>
                                 <td><input id="strafe_move_gravity" type="number" min="250" max="5000"></td>
                             </tr>
                             <tr>
-                                <td colspan="3">Jump Impulse</td>
+                                <td colspan="3"><label for="strafe_move_jump_impulse">Jump Impulse</label></td>
                                 <td><input id="strafe_move_jump_impulse" type="number" min="50" max="1000"></td>
                             </tr>
                             <tr>
-                                <td colspan="3">Stall Speed</td>
+                                <td colspan="3"><label for="strafe_move_stall_speed">Stall Speed</label></td>
                                 <td><input id="strafe_move_stall_speed" type="number" min="10" max="1000"></td>
                             </tr>
                             <tr>
-                                <td colspan="3">Friction</td>
+                                <td colspan="3"><label for="strafe_move_friction">Friction</label></td>
                                 <td><input id="strafe_move_friction" type="number" min="1" max="100"></td>
                             </tr>
                             <tr>
                                 <td colspan="2" rowspan="2">Ground</td>
-                                <td>Max Speed</td>
+                                <td><label for="strafe_move_ground_speed">Max Speed</label></td>
                                 <td><input id="strafe_move_ground_speed" type="number" min="10" max="1000"></td>
                             </tr>
                             <tr>
-                                <td>Acceleration</td>
+                                <td><label for="strafe_move_ground_accel">Acceleration</label></td>
                                 <td><input id="strafe_move_ground_accel" type="number" min="100" max="10000"></td>
                             </tr>
                             <tr>
                                 <td colspan="2" rowspan="2">Air</td>
-                                <td>Max Speed</td>
+                                <td><label for="strafe_move_air_speed">Max Speed</label></td>
                                 <td><input id="strafe_move_air_speed" type="number" min="10" max="1000"></td>
                             </tr>
                             <tr>
-                                <td>Acceleration</td>
+                                <td><label for="strafe_move_air_accel">Acceleration</label></td>
                                 <td><input id="strafe_move_air_accel" type="number" min="100" max="10000"></td>
                             </tr>
                             <tr>
-                                <td rowspan="2">Air (turning)</td>
+                                <td rowspan="2"><label for="strafe_move_turn_enabled">Air (turning)</label></td>
                                 <td rowspan="2"><input id="strafe_move_turn_enabled" type="checkbox"></td>
-                                <td>Max Speed</td>
+                                <td><label for="strafe_move_turn_speed">Max Speed</label></td>
                                 <td><input id="strafe_move_turn_speed" type="number" min="10" max="1000"></td>
                             </tr>
                             <tr>
-                                <td>Acceleration</td>
+                                <td><label for="strafe_move_turn_accel">Acceleration</label></td>
                                 <td><input id="strafe_move_turn_accel" type="number" min="100" max="10000"></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div id="strafe_menu_bot" class="strafe_hidden">
+                    <h2>Strafe Bot</h2>
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <label for="strafe_bot_mode"
+                                        data-tooltip="Only recommended for &quot;Vanilla&quot; movement">
+                                            Mode
+                                    </label>
+                                </td>
+                                <td>
+                                    <select id="strafe_bot_mode">
+                                        <option value="unspecified" disabled hidden>Unspecified</option>
+                                        <option value="disabled">Disabled</option>
+                                        <option value="full-beat">Full-Beat</option>
+                                        <option value="full-beat-reverse">Full-Beat (Reverse)</option>
+                                        <option value="half-beat-left">Half-Beat (Left)</option>
+                                        <option value="half-beat-right">Half-Beat (Right)</option>
+                                    </select>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><label for="strafe_bot_hop">Auto-Hop</label></td>
+                                <td style="text-align: right;">
+                                    <input id="strafe_bot_hop" type="checkbox">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><label for="strafe_bot_move">Auto-Move</label></td>
+                                <td style="text-align: right;">
+                                    <input id="strafe_bot_move" type="checkbox">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><label for="strafe_bot_turn">Auto-Turn</label></td>
+                                <td style="text-align: right;">
+                                    <input id="strafe_bot_turn" type="checkbox">
+                                </td>
                             </tr>
                         </tbody>
                     </table>
