--- a/static/index.html
+++ b/static/index.html
@@ -287,15 +287,12 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                     </table>
                 </div>
                 <div id="strafe_menu_bot" class="strafe_hidden">
-                    <h2>Strafe Bot</h2>
+                    <h2 data-tooltip="Only recommended for &quot;Vanilla&quot; movement">Strafe Bot</h2>
                     <table>
                         <tbody>
                             <tr>
                                 <td>
-                                    <label for="strafe_bot_mode"
-                                        data-tooltip="Only recommended for &quot;Vanilla&quot; movement">
-                                            Mode
-                                    </label>
+                                    <label for="strafe_bot_mode">Mode</label>
                                 </td>
                                 <td>
                                     <select id="strafe_bot_mode">
