--- a/static/index.html
+++ b/static/index.html
@@ -158,7 +158,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                 top: 2em;
                 left: 50%;
                 transform: translate(-50%, 0);
-                width: 60em;
+                width: 50em;
                 white-space: pre-wrap;
                 color: black;
                 font-size: 16pt;
@@ -180,6 +180,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                 right: 1em;
                 font-family: 'Inconsolata', monospace;
                 text-align: right;
+                color: black;
             }
             #strafe_speedometer {
                 position: absolute;
