--- a/static/index.html
+++ b/static/index.html
@@ -222,7 +222,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
             }
         </style>
     </head>
-    <body>
+    <body oncontextmenu="return false;">
         <div id="strafe_root">
             <canvas id="strafe_canvas"></canvas>
             <div id="strafe_overlay">
