enforce correct keys when strafe bot is active

--- a/static/index.html
+++ b/static/index.html
@@ -357,6 +357,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                                             <select id="strafe_bot_mode">
                                                 <option value="unspecified" disabled hidden>Unspecified</option>
                                                 <option value="disabled">Disabled</option>
+                                                <option value="player-keys">Players' Keys</option>
                                                 <option value="standard">Standard (W/A+W/D)</option>
                                                 <option value="reverse">Reverse (S/A+S/D)</option>
                                                 <option value="half-beat-left">Half-Beat, Left (W/A+D)</option>
