Add more strafe bot modes

--- a/static/index.html
+++ b/static/index.html
@@ -362,6 +362,9 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                                                 <option value="reverse">Reverse (S/A+S/D)</option>
                                                 <option value="half-beat-left">Half-Beat, Left (W/A+D)</option>
                                                 <option value="half-beat-right">Half-Beat, Right (A+W/D)</option>
+                                                <option value="high-speed">High Speed (A/D)</option>
+                                                <option value="sideways-left">Sideways, Left (SA/WA)</option>
+                                                <option value="sideways-right">Sideways, Right (WD/SD)</option>
                                             </select>
                                         </td>
                                     </tr>
